maybe final variant of intercepting back view

--- a/gpsmixtest/src/main/AndroidManifest.xml
+++ b/gpsmixtest/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sevenfloor.gpsmixtest" >
 
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
